--- a/_includes/entry.html
+++ b/_includes/entry.html
@@ -1,17 +1,20 @@
-<article>
-  <h1><a href="{{ post.link }}">{{ post.title }}</a></h1>
-  <p class="source">{{ post.source }}</p>
-  <ul>
-    {% for tag in post.tags %}
-    <li>
-      <a href="">{{ tag }}</a>
-    </li>
-    {% endfor %}
-  </ul>
-  <p class="author">{{ post.author }}</p>
-  <p class="date">{{ post.date }}</p>
-  <p class="abstract">{{ post.abstract }}</p>
-  <p class="quote">{{ post.quote }}</p>
-  <p class="comment">{{ post.comment }}</p>
-  <p class="seeAlso">{{ post.seeAlso }}</p>
+<article id="id-{{ post.url | replace:'.html','' | replace:'/','' }}" class="pb3">
+  <div class="p2 border">
+      <h1 class="h2 mt0"><a href="{{ post.link }}">{{ post.title }}</a></h1>
+      <p class="m0">by <span class="source">{{ post.author}}</span>, on <span class="date">{{ post.date }}</span>, in <span class="source">{{ post.source }}</span></p>
+      <div class="mt2 mb2">
+        <span>tags: </span>
+        <ul class="list-reset inline">
+          {% for tag in post.tags %}
+          <li class="inline">
+            <a href="">{{ tag }}</a> |
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
+      <p class="abstract">{{ post.abstract }}</p>
+      <p class="quote">{{ post.quote }}</p>
+      <p class="comment">{{ post.comment }}</p>
+      <p class="seeAlso">{{ post.seeAlso }}</p>
+  </div>
 </article>
