got the js build process working, so now jekyll is building from zotero data

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -10,13 +12,11 @@
     <meta name="description" content="">
     <meta name="author" content="Brian Zelip">
     <meta name="keywords" content="">
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="zotero.js"></script>
   </head>
 
   <body>
 
-    <ul id="allTags"></ul>
+    {{ content }}
 
   </body>
 
