npm script to update data, inject abstract and byline info if present, update tag styles

--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -2,7 +2,7 @@
   <ul class="list-reset">
     {% assign tags = site.data.zoteroTags | sort: 'tag' %}
     {% for tag in tags %}
-    <li><a href="https://www.zotero.org/groups/syllabusforamerica/items/tag/{{ tag.tag }}" class="tag">{{ tag.tag }}</a></li>
+    <li class="mb1"><a href="https://www.zotero.org/groups/syllabusforamerica/items/tag/{{ tag.tag }}" class="tag">{{ tag.tag }}</a></li>
     {% endfor %}
   </ul>
 </div>
