--- a/_includes/items.html
+++ b/_includes/items.html
@@ -3,21 +3,30 @@
   {% if item.links.up == null  %}
   <article id="id-{{ item.key }}" class="pb3">
     <div class="p2 border">
-        <h1 class="h2 mt0"><a href="{{ item.links.alternate.href }}">{{ item.data.title }}</a></h1>
-        <p class="m0">by <span class="source">{{ item.data.creators[0].firstName }} {{ item.data.creators[0].lastName }}</span>, on <span class="date">{{ item.data.date | date: "%b %d, %Y"  }}</span>, in <span class="source">{{ item.data.publicationTitle }}</span></p>
-        <div class="mt2 mb2">
+        <h1 class="h2 mt0"><a href="{{ item.data.url }}">{{ item.data.title }}</a></h1>
+        <p>
+          {% if item.data.creators[0].firstName != null and item.data.creators[0].firstName != "" %}by {{ item.data.creators[0].firstName }} {{ item.data.creators[0].lastName }} {% endif %}{% if item.data.date != null and item.data.date != "" %}on {{ item.data.date | date: "%b %d, %Y"  }} {% endif %}{% if item.data.publicationTitle != null and item.data.publicationTitle != "" %}in {{ item.data.publicationTitle }}{% endif %}</p>
+
+        {% if item.data.abstractNote != "" %}
+        <div>
+          <p class="h3 mb1">Abstract</p>
+          <p>{{ item.data.abstractNote }}</p>
+        </div>
+        {% endif %}
+        <!--
+        <p class="quote">{{ item.quote }}</p>
+        <p class="comment">{{ item.comment }}</p>
+        <p class="seeAlso">{{ item.seeAlso }}</p>
+        -->
+        <div>
           <ul class="list-reset inline">
             {% for tag in item.data.tags %}
             <li class="inline">
-              <a href="" class="pr1"><i class="fa fa-tag"></i> {{ tag.tag }}</a>
+              <a href="" class="pr1 mb1 tag"> {{ tag.tag }}</a>
             </li>
             {% endfor %}
           </ul>
         </div>
-        <!-- <p class="abstract">{{ item.abstract }}</p>
-        <p class="quote">{{ item.quote }}</p>
-        <p class="comment">{{ item.comment }}</p>
-        <p class="seeAlso">{{ item.seeAlso }}</p> -->
     </div>
   </article>
   {% endif %}
