--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -2,11 +2,14 @@
   <ul class="list-reset">
     {% assign tags = site.data.zoteroTags | sort: 'tag' %}
     {% for tag in tags %}
-    <li class="mb1"><a href="https://www.zotero.org/groups/syllabusforamerica/items/tag/{{ tag.tag }}" class="tag">{{ tag.tag }}</a></li>
+    <li class="mb1">
+      <button class="tag">{{ tag.tag }}</button>
+    </li>
     {% endfor %}
   </ul>
 </div>
 
-<!-- References
+<!--
+    REFERENCES
     -https://help.shopify.com/themes/liquid/filters/array-filters#sort
 -->
