--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,5 +1,5 @@
 <div>
-  <ul class="list-reset">
+  <ul class="list-reset" id="filters">
     {% assign tags = site.data.zoteroTags | sort: 'tag' %}
     {% for tag in tags %}
     <li class="mb1">
