still struggling with filtering, few minor changes here from my work with isotope practice, going to merge and delete this branch then iterate on filtering on master

--- a/_includes/items.html
+++ b/_includes/items.html
@@ -1,4 +1,4 @@
-<div id="main">
+<div id="grid">
 {% for item in site.data.zoteroItems %}
   {% if item.links.up == null  %}
   <article id="id-{{ item.key }}" class="mb3" data-tags="{% for tag in item.data.tags %}{{ tag.tag | downcase | replace: " ", "-" }}{% if tag != item.data.tags.last %}&nbsp;{% endif %}{% endfor %}">
