--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -2,7 +2,7 @@
   {% assign tags = site.data.zoteroTags | sort: 'tag' %}
   {% for tag in tags %}
   <li class="mb1">
-    <button class="tag" data-filter="{{ tag.tag | downcase | replace: " ", "-" }}">{{ tag.tag }}</button>
+    <button class="tag" data-filter="{{ tag.tag | downcase | remove: "’" |  remove: " " | remove: "'" | remove: "(" | remove: ")" | remove: "." | remove: "&" | remove: "-" | remove: "+" | remove: "[" | remove: "]" | remove: "," }}">{{ tag.tag }}</button>
   </li>
   {% endfor %}
 </ol>
